fix reviews container flex direction on small devices

--- a/components/reviews/reviews.scss
+++ b/components/reviews/reviews.scss
@@ -129,11 +129,14 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
 
-} 
+}
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
   .reviews {
+    &__container {
+      flex-direction: column;
+    }
     &__content {
       margin: 3rem 0;
     }
